--- a/package.json
+++ b/package.json
@@ -1,14 +1,38 @@
 {
-  "name": "llamacpp-react",
-  "version": "1.0.0",
-  "description": "```sh make setup make install make -f execute.mk server curl --request POST --url http://localhost:8080/completion --header \"Content-Type: application/json\" --data '{\"prompt\": \"Building a website can be done in 10 simple steps:\",\"n_predict\": 128}' curl --request POST --url http://localhost:8080/completion --header \"Content-Type: application/json\" --data '{\"prompt\": \"Building a website can be done in 10 simple steps:\",\"n_predict\": 128, \"stream\":true}' ````",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "create-react-app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "axios": "^1.6.8"
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
